<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sendMessagePanel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingTop="5dp"
    android:paddingEnd="8dp"
    android:paddingBottom="9dp"
    android:visibility="visible"
    tools:ignore="RtlSymmetry">

    <LinearLayout
        android:id="@+id/replyPreviewWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/cancelPreview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            app:srcCompat="@drawable/ic_close"
            app:tint="?android:textColorPrimary" />

        <TextView
            android:id="@+id/contentPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:maxWidth="280dp"
            android:minWidth="140dp"
            android:padding="4dp"
            android:paddingStart="8dp"
            android:textColor="?android:textColorPrimary"
            tools:ignore="RtlSymmetry"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/chatAudioButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/record_audio_button_hint"
            android:padding="8dp"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_mic"
            app:tint="?attr/colorAccent" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/composer_input_bg"
            android:minHeight="38dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/new_message_hint"
                android:imeOptions="actionSend"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLines="3"
                android:minHeight="38dp"
                android:paddingStart="14dp"
                android:paddingTop="8dp"
                android:paddingEnd="14dp"
                android:paddingBottom="8dp"
                android:textColor="?android:textColorPrimary" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="0">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/composerMoreButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/attachment"
                android:padding="8dp"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_add"
                app:tint="?attr/colorAccent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/chatSendButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/send_message_button_hint"
                android:padding="8dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_send"
                app:tint="?attr/colorAccent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/chatEditDoneButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/send_message_button_hint"
                android:padding="8dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_check_circle"
                app:tint="?attr/colorAccent" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
